[gd_scene load_steps=11 format=2]

[ext_resource path="res://Project/Project.gd" type="Script" id=1]
[ext_resource path="res://Project/Objective.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/cnr.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://Icons/icon_add.png" type="Texture" id=5]
[ext_resource path="res://Icons/icon_play.svg" type="Texture" id=6]
[ext_resource path="res://Icons/icon_stop.svg" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="Project" type="VBoxContainer" groups=[
"project",
]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
objective = ExtResource( 2 )

[node name="Container" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 33.0
theme = ExtResource( 4 )
alignment = 1

[node name="Label" type="Label" parent="Container"]
margin_right = 125.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "0.0 hours"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="Container"]
margin_left = 129.0
margin_right = 154.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Container"]
margin_left = 158.0
margin_right = 189.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="ProgressBar" type="ProgressBar" parent="Container"]
margin_left = 193.0
margin_right = 820.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
step = 0.001
value = 100.0

[node name="ProjectName" type="Label" parent="Container"]
margin_left = 824.0
margin_right = 988.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Project Name"
align = 1

[node name="TextureButton" type="TextureButton" parent="Container"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
[connection signal="toggled" from="Container/TextureButton2" to="." method="_on_TextureButton2_toggled"]
[connection signal="button_down" from="Container/TextureButton" to="." method="request_to_add"]
